[gd_scene format=3 uid="uid://s1e2t3c4o5m6p"]

[ext_resource type="Script" path="res://scripts/ui/set_complete.gd" id="1"]

[node name="SetComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -380.0
offset_right = 420.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SetCompleteLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 64
text = "SET COMPLETE!"
horizontal_alignment = 1

[node name="SetNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Classic Challenge"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 42
text = "Final Score: 0"
horizontal_alignment = 1

[node name="SetHighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = ""
horizontal_alignment = 1

[node name="PerfectSetLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "PERFECT SET CLEAR! (3x Score Bonus)"
horizontal_alignment = 1
visible = false

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="BreakdownContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="BreakdownTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 20
text = "SET SCORE BREAKDOWN"
horizontal_alignment = 1

[node name="BaseScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "Base Score: 0"
horizontal_alignment = 1

[node name="DifficultyBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Difficulty Bonus: +0"
horizontal_alignment = 1

[node name="ComboBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Combo Bonus: +0"
horizontal_alignment = 1

[node name="StreakBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Streak Bonus: +0"
horizontal_alignment = 1

[node name="DoubleBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Power-Up Bonus: +0"
horizontal_alignment = 1

[node name="PerfectClearBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Perfect Clear Bonus: +0"
horizontal_alignment = 1

[node name="PerfectSetBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Perfect Set Bonus: +0"
horizontal_alignment = 1

[node name="TotalScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Total: 0"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Set Time: 00:00"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="NextSetButton" type="Button" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.3, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "NEXT SET"

[node name="SetSelectButton" type="Button" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_hover_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 28
text = "BACK TO SET SELECT"

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/font_hover_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonsContainer/NextSetButton" to="." method="_on_next_set_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonsContainer/SetSelectButton" to="." method="_on_set_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonsContainer/MenuButton" to="." method="_on_menu_button_pressed"]
